# 4ms-vcv

./: .clang-format  .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE-GPL-v3.txt  LICENSE.md  Makefile  README.md  RackSDK.cmake  make-models.mk  plugin.json
.github/workflows/: build_vcv_plugin.yml
lib/4ms-CoreModules/: 4ms_elements.hh
lib/4ms-CoreModules/core/: ADEnvCore.cc  CLKMCore.cc  ComplexEGCore.cc  DetuneCore.cc  DjembeCore_neon.h  ENVVCACore.cc  EnOscCore.cc  FMCore.cc  FreeverbCore.cc  GateCore.cc  HPFCore.cc  KPLSCore.cc  L4Core.cc  LPGCore.cc  MNMXCore.cc  MPEGCore.cc  MultiLFOCore.cc  NoiseCore.cc  OctaveCore.cc  PEGCore.cc  PanCore.cc  Prob8Core.cc  QPLFOCore.cc  QuantCore.cc  SHCore.cc  SISMCore.cc  STSCore.cc  Seq8Core.cc  SlewCore.cc  SourceCore.cc  StMixCore.cc  Switch14Core.cc  VerbCore.cc
lib/4ms-CoreModules/core/axoloti-wrapper/: arch_arm.h  axoloti_math.cpp
lib/4ms-CoreModules/core/enosc/: control.hh  data.cc  data.hh  distortion.hh  dynamic_data.cc  dynamic_data.hh  oscillator.hh  parameters.hh  quantizer.hh
lib/4ms-CoreModules/core/envvca/: FollowInput.h  SSI2162.h  Tables.h  TriangleOscillator.h
lib/4ms-CoreModules/core/helpers/: EdgeDetector.h  FlipFlop.h  circuit_elements.h  quantization.h
lib/4ms-CoreModules/core/l4/: DCBlock.h  PeakDetector.h  Tables.h
lib/4ms-CoreModules/core/looping-delay/: DLDChannel.hh
lib/4ms-CoreModules/info/: BPF_info.hh  BuffMult_info.hh  CLKD_info.hh  CLKM_info.hh  Comp_info.hh  ComplexEG_info.hh  DEV_info.hh  DLD_info.hh  Drum_info.hh  EnOsc_info.hh  Freeverb_info.hh  GRev_info.hh  Gate8_info.hh  Gate_info.hh  InfOsc_info.hh  MNMX_info.hh  MPEG_info.hh  Mixer4_info.hh  MultiLFO_info.hh  Noise_info.hh  Octave_info.hh  Pan_info.hh  PitchShift_info.hh  Prob8_info.hh  QPLFO_info.hh  Quant_info.hh  SH_info.hh  SISM_info.hh  Seq4_info.hh  Slew_info.hh  Source_info.hh  StMix_info.hh  Switch41_info.hh  Verb_info.hh
lib/4ms-CoreModules/svg/: QCD_info.ai
lib/CoreModules/4ms/: 4ms_element_state_conversions.hh
scripts/: createinfo.py  info-svg-specs.md  vcv-artwork.py
scripts/helpers/: svg_parse_helpers.py  util.py  xml_helper.py
src/: generic_module.hh  plugin.cc  plugin.hh  scaling_config.hh
src/async/: async_thread.cc
src/comm/: comm_jack.hh  comm_module.cc  comm_module.hh
src/compat/: gui.cc  patch.cc
src/conf/: scaling_config.hh
src/console/: pr_dbg.hh
src/core-vcv/: register_module.cc
src/core-vcv/filesystem/: async_filebrowser.cc
src/core-vcv/graphics/: waveform_display.hh
src/dsp/: stream_resampler.cc
src/expanders/: audio_expander.cc  button_expander.cc  button_expander.hh
src/filesystem/: async_filebrowser.cc
src/flatbuffers/: CMakeLists.txt  encode.cc  encode.hh
src/flatbuffers/flat/: all_generated.h
src/fs/: fatfs_adaptor.cc  ff_host.hh  fs_proxy.cc  fs_proxy.hh
src/graphics/: waveform_display.cc
src/hardware_support/: filesystem_helpers.cc  memory.cc  random.cc  time.cc
src/hub/: buttons.hh  hub_elements.hh  hub_jack_label.cc  hub_jack_label.hh  hub_knob.hh  hub_knob_map_button.hh  hub_knob_mappings.hh  hub_knob_menu.hh  hub_map_button.cc  hub_map_button.hh  hub_medium.cc  hub_midi.hh  hub_module.hh  hub_module_widget.hh  hub_param.hh  jack_alias.hh  jack_alias_menu.hh  knob_set_buttons.hh  knob_set_menu.hh  label_delay.hh  mm_blendish.cc  mm_blendish.hh  module_alias.hh  text_field.hh
src/mapping/: JackMap.hh  MappableObject.h  ModuleID.h  ParamMap.hh  cable_color.hh  expanders.hh  knob_alias_menu.hh  map_marks.hh  map_palette.hh  mapping.hh  midi_modules.cc  midi_modules.hh  module_directory.hh  module_specific_fixes.cc  module_specific_fixes.hh  patch_writer.cc  patch_writer.hh  range_slider.hh  range_value_parser.hh  vcv_patch_file_writer.hh
src/models/: ADEnv.cc  Atvert2.cc  BPF.cc  BWAVP.cc  BuffMult.cc  CLKD.cc  CLKM.cc  Comp.cc  ComplexEG.cc  DEV.cc  DLD.cc  Detune.cc  Djembe.cc  Drum.cc  ENVVCA.cc  EnOsc.cc  FM.cc  Fade.cc  FadeIn.cc  FadeOut.cc  Follow.cc  Freeverb.cc  GRev.cc  Gate.cc  Gate32.cc  Gate8.cc  HPF.cc  InfOsc.cc  KPLS.cc  Keyboard.cc  L4.cc  LPF.cc  LPG.cc  MNMX.cc  MPEG.cc  Mixer4.cc  MultiLFO.cc  Noise.cc  Octave.cc  OctoPush.cc  (+28 more)
src/network/: network.cpp  network.hh
src/sys/: alloc_buffer.hh
src/thread/: async_thread.cc  async_thread_control.cc  async_thread_control.hh
src/wav/: dr_wav.c  wav_file_stream.cc
src/widgets/: alt_params_implementation.h  base_modules_implemenation.hh  config_element.hh  config_element_impl.hh  vcv_creation_context.hh  vcv_module_creator.hh  vcv_widget_creator.hh
src/widgets/4ms/: 4ms_widget_creator.hh  4ms_widgets.hh  4ms_widgets_implementation.hh  quantities.hh
tests/: .clangd  Makefile  central_data_tests.cc  patch_writer_tests.cc  rack.hpp  range_value_parser_tests.cc
tests/jansson/: CMakeLists.txt  jansson_config.h  jansson_private_config.h
tests/jansson/jansson/src/: hashtable_seed.c
(+205 files in other folders)
